# gitea

./: .gitignore  README.md
.github/workflows/: e2e-checksum.yml
models/encryption/: config.go  key_meta.go  migration_progress.go  repo_key.go  user_key.go
models/issues/: comment.go  content_history.go  issue.go
models/migrations/: migrations.go
models/migrations/v1_26/: v331.go  v332.go
models/repo/: repo.go
models/secret/: secret.go
models/webhook/: hooktask.go  webhook.go
modules/encryption/: cipher.go  dbfield.go  encryption.go  encryption_test.go  hybrid.go  kdf.go  keymanager.go  keys.go  stream.go
modules/setting/: encryption.go  setting.go
modules/storage/: encrypted.go  storage.go
routers/: init.go
routers/api/v1/: api.go
routers/api/v1/admin/: encryption.go
routers/api/v1/org/: encryption.go
routers/web/: web.go
routers/web/admin/: encryption.go
services/cron/: tasks_encryption.go
services/encryption/: config.go  migrate.go
templates/admin/: encryption.tmpl
web_src/js/: index.ts
web_src/js/features/: repo-encryption.ts
web_src/js/modules/: encryption-integrity.ts  encryption-keys.ts  encryption-render.ts  encryption.test.html  encryption.ts
web_src/verification/extension/: generate-icons.html  manifest.json  popup.html  popup.js  verify.js
web_src/verification/extension-firefox/: manifest.json  popup.js  popup.js.tmp.48536.1775621470620  verify.js
web_src/verification/tampermonkey/: gitea-e2e-verify.user.js
web_src/wasm/: build.sh
web_src/wasm/gitea-crypto/: Cargo.toml
web_src/wasm/gitea-crypto/src/: lib.rs
(+3 files in other folders)
